contrast issue fixed

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -543,6 +543,7 @@ footer img {
 
 footer p {
     margin-left: 30px;
+    color: black;
 }
 
 .sociallinks a {
